--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,41 @@
   <img class="avatar" src="{{ site.avatar }}" alt="{{ site.author }}">
   <div class="col-box-title name">{{ site.author }}</div>
   <p>{{ site.profile }}</p>
-  <p class="contact">
+
+  {% if site.twitter_username %}
+  <ul class="social list-inline">
+    <li>
+    <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"> <i class="fa fa-linkedin"> </i></a>
+    </li>
+  </ul>
+  {% endif %}
+
+  {% if site.linkedin_username %}
+  <ul class="social list-inline">
+    <li>
+    <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin " aria-hidden="true"> </i></a>
+    </li>
+  </ul>
+  {% endif %}
+
+  {% if site.stack-overflow_username %}
+  <ul class="social list-inline">
+    <li>
+      <a href="http://stackoverflow.com/users/5993410/{{ site.stack-overflow_username }}" target="_blank"><i class="fa fa-stack-overflow fa-colored"></i></a>
+    </li>
+  </ul>
+  {% endif %}
+
+  {% if site.github_username %}
+  <ul class="social list-inline">
+    <li>
+      <a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fa fa-github-alt"></i></a>
+      <br>
+    </li>
+  </ul>
+  {% endif %}
+  
+<!--   <p class="contact">
     {% if site.github_username %}
     <a href="https://github.com/{{ site.github_username }}">GitHub</a>
     {% endif %}
@@ -12,14 +46,31 @@
     {% if site.email %}
     <a href="mailto:{{ site.email }}">Email</a>
     {% endif %}
-  </p>
+  </p> -->
+</div>
+
+<div class="col-box">
+  <div class="col-box-title">Contact</div>
+        <ul class="list-unstyled">
+          <li>
+            <i class="fa fa-map-marker fa-fw"></i><span class="sr-only">Location:</span> Cairo,
+            Egypt
+          </li>
+          <li>
+            <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:atef_moh@sci.asu.edu.eg"> atef_moh@sci.asu.edu.eg </a>
+          </li>
+          <li>
+            <i class="fa fa-link fa-fw"></i><span class="sr-only"> Website:</span>
+            <a style="color:#a1f229" href="http://atefhares.github.io">www.atefhares.github.io</a>
+          </li>
+        </ul>
 </div>
 
 <div class="col-box">
   <div class="col-box-title">Newest Posts</div>
   <ul class="post-list">
     {% for post in site.posts limit:5 %}
-      <li><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+      <li><a  style="color:#a1f229" class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
