--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -38,17 +38,6 @@
             border-bottom: 1px solid #CCC;
         }
         
-        pre {
-            max-height: 300px;
-            width: auto;
-            overflow: auto;  
-            display: block;
-        	margin: 0 0px;
-            @include media-query($on-palm) {
-		        margin: 0 -10px;
-            }
-        }
-        
         .middle-image {
             display: block;
             margin-left: auto;
@@ -57,5 +46,9 @@
     }
     .post-comments {
         padding-top: 30px;
+    }
+
+    .post.a:link {
+        color: hotpink;
     }
 }
