--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,157 +1,111 @@
-/* syntax.css */
-
-/* to make lines scroll instead of wrap */
-/* from http://stackoverflow.com/a/23393920 */
-
-.highlight pre code * {
-  white-space: nowrap;    // this sets all children inside to nowrap
+.highlight pre {
+padding: 10;
+background-color: #272822;
+border: box;
+border-radius: 5px;
+max-height:300px;
+width: auto;
+overflow: auto;
+display: block;
+margin: 0 0px;
+white-space: pre-wrap;
 }
 
-.highlight pre {
-  overflow-x: auto;       // this sets the scrolling in x
+.highlight .table-responsive,
+.highlight pre,
+.highlight .table > tbody > tr > td
+{
+border: box;
+border-radius: 5px;
+}
+
+.highlight .table-responsive {
+margin-bottom: 0;
+}
+
+.highlight .table>tbody>tr>td {
+padding: 8px 8px 0 8px;
+}
+
+
+.highlight .lineno {
+color: #ccc;
+display:inline-block;
+padding: 0 5px;
+border-right:1px
+solid #ccc;
 }
 
 .highlight pre code {
-  white-space: pre;       // forces <code> to respect <pre> formatting
+display: inline-block;
+white-space: pre;
+overflow-x: auto;
 }
 
-/* github style pygments theme for jekyll */
-/* from https://github.com/aahan/pygments-github-style */
 
-pre .hll { background-color: #ffffcc }
-pre  { background: #f0f0f0; }
-pre .c { color: #60a0b0; font-style: italic } /* Comment */
-pre .err { border: 1px solid #FF0000 } /* Error */
-pre .k { color: #007020; font-weight: bold } /* Keyword */
-pre .o { color: #666666 } /* Operator */
-pre .ch { color: #60a0b0; font-style: italic } /* Comment.Hashbang */
-pre .cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
-pre .cp { color: #007020 } /* Comment.Preproc */
-pre .cpf { color: #60a0b0; font-style: italic } /* Comment.PreprocFile */
-pre .c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
-pre .cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
-pre .gd { color: #A00000 } /* Generic.Deleted */
-pre .ge { font-style: italic } /* Generic.Emph */
-pre .gr { color: #FF0000 } /* Generic.Error */
-pre .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-pre .gi { color: #00A000 } /* Generic.Inserted */
-pre .go { color: #888888 } /* Generic.Output */
-pre .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-pre .gs { font-weight: bold } /* Generic.Strong */
-pre .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-pre .gt { color: #0044DD } /* Generic.Traceback */
-pre .kc { color: #007020; font-weight: bold } /* Keyword.Constant */
-pre .kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
-pre .kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
-pre .kp { color: #007020 } /* Keyword.Pseudo */
-pre .kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
-pre .kt { color: #902000 } /* Keyword.Type */
-pre .m { color: #40a070 } /* Literal.Number */
-pre .s { color: #4070a0 } /* Literal.String */
-pre .na { color: #4070a0 } /* Name.Attribute */
-pre .nb { color: #007020 } /* Name.Builtin */
-pre .nc { color: #0e84b5; font-weight: bold } /* Name.Class */
-pre .no { color: #60add5 } /* Name.Constant */
-pre .nd { color: #555555; font-weight: bold } /* Name.Decorator */
-pre .ni { color: #d55537; font-weight: bold } /* Name.Entity */
-pre .ne { color: #007020 } /* Name.Exception */
-pre .nf { color: #06287e } /* Name.Function */
-pre .nl { color: #002070; font-weight: bold } /* Name.Label */
-pre .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-pre .nt { color: #062873; font-weight: bold } /* Name.Tag */
-pre .nv { color: #bb60d5 } /* Name.Variable */
-pre .ow { color: #007020; font-weight: bold } /* Operator.Word */
-pre .w { color: #bbbbbb } /* Text.Whitespace */
-pre .mb { color: #40a070 } /* Literal.Number.Bin */
-pre .mf { color: #40a070 } /* Literal.Number.Float */
-pre .mh { color: #40a070 } /* Literal.Number.Hex */
-pre .mi { color: #40a070 } /* Literal.Number.Integer */
-pre .mo { color: #40a070 } /* Literal.Number.Oct */
-pre .sa { color: #4070a0 } /* Literal.String.Affix */
-pre .sb { color: #4070a0 } /* Literal.String.Backtick */
-pre .sc { color: #4070a0 } /* Literal.String.Char */
-pre .dl { color: #4070a0 } /* Literal.String.Delimiter */
-pre .sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
-pre .s2 { color: #4070a0 } /* Literal.String.Double */
-pre .se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
-pre .sh { color: #4070a0 } /* Literal.String.Heredoc */
-pre .si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
-pre .sx { color: #c65d09 } /* Literal.String.Other */
-pre .sr { color: #235388 } /* Literal.String.Regex */
-pre .s1 { color: #4070a0 } /* Literal.String.Single */
-pre .ss { color: #517918 } /* Literal.String.Symbol */
-pre .bp { color: #007020 } /* Name.Builtin.Pseudo */
-pre .fm { color: #06287e } /* Name.Function.Magic */
-pre .vc { color: #bb60d5 } /* Name.Variable.Class */
-pre .vg { color: #bb60d5 } /* Name.Variable.Global */
-pre .vi { color: #bb60d5 } /* Name.Variable.Instance */
-pre .vm { color: #bb60d5 } /* Name.Variable.Magic */
-pre .il { color: #40a070 } /* Literal.Number.Integer.Long */.syntax pre .hll { background-color: #ffffcc }
-.syntax pre  { background: #f0f0f0; }
-.syntax pre .c { color: #60a0b0; font-style: italic } /* Comment */
-.syntax pre .err { border: 1px solid #FF0000 } /* Error */
-.syntax pre .k { color: #007020; font-weight: bold } /* Keyword */
-.syntax pre .o { color: #666666 } /* Operator */
-.syntax pre .ch { color: #60a0b0; font-style: italic } /* Comment.Hashbang */
-.syntax pre .cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
-.syntax pre .cp { color: #007020 } /* Comment.Preproc */
-.syntax pre .cpf { color: #60a0b0; font-style: italic } /* Comment.PreprocFile */
-.syntax pre .c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
-.syntax pre .cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
-.syntax pre .gd { color: #A00000 } /* Generic.Deleted */
-.syntax pre .ge { font-style: italic } /* Generic.Emph */
-.syntax pre .gr { color: #FF0000 } /* Generic.Error */
-.syntax pre .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.syntax pre .gi { color: #00A000 } /* Generic.Inserted */
-.syntax pre .go { color: #888888 } /* Generic.Output */
-.syntax pre .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-.syntax pre .gs { font-weight: bold } /* Generic.Strong */
-.syntax pre .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.syntax pre .gt { color: #0044DD } /* Generic.Traceback */
-.syntax pre .kc { color: #007020; font-weight: bold } /* Keyword.Constant */
-.syntax pre .kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
-.syntax pre .kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
-.syntax pre .kp { color: #007020 } /* Keyword.Pseudo */
-.syntax pre .kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
-.syntax pre .kt { color: #902000 } /* Keyword.Type */
-.syntax pre .m { color: #40a070 } /* Literal.Number */
-.syntax pre .s { color: #4070a0 } /* Literal.String */
-.syntax pre .na { color: #4070a0 } /* Name.Attribute */
-.syntax pre .nb { color: #007020 } /* Name.Builtin */
-.syntax pre .nc { color: #0e84b5; font-weight: bold } /* Name.Class */
-.syntax pre .no { color: #60add5 } /* Name.Constant */
-.syntax pre .nd { color: #555555; font-weight: bold } /* Name.Decorator */
-.syntax pre .ni { color: #d55537; font-weight: bold } /* Name.Entity */
-.syntax pre .ne { color: #007020 } /* Name.Exception */
-.syntax pre .nf { color: #06287e } /* Name.Function */
-.syntax pre .nl { color: #002070; font-weight: bold } /* Name.Label */
-.syntax pre .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-.syntax pre .nt { color: #062873; font-weight: bold } /* Name.Tag */
-.syntax pre .nv { color: #bb60d5 } /* Name.Variable */
-.syntax pre .ow { color: #007020; font-weight: bold } /* Operator.Word */
-.syntax pre .w { color: #bbbbbb } /* Text.Whitespace */
-.syntax pre .mb { color: #40a070 } /* Literal.Number.Bin */
-.syntax pre .mf { color: #40a070 } /* Literal.Number.Float */
-.syntax pre .mh { color: #40a070 } /* Literal.Number.Hex */
-.syntax pre .mi { color: #40a070 } /* Literal.Number.Integer */
-.syntax pre .mo { color: #40a070 } /* Literal.Number.Oct */
-.syntax pre .sa { color: #4070a0 } /* Literal.String.Affix */
-.syntax pre .sb { color: #4070a0 } /* Literal.String.Backtick */
-.syntax pre .sc { color: #4070a0 } /* Literal.String.Char */
-.syntax pre .dl { color: #4070a0 } /* Literal.String.Delimiter */
-.syntax pre .sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
-.syntax pre .s2 { color: #4070a0 } /* Literal.String.Double */
-.syntax pre .se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
-.syntax pre .sh { color: #4070a0 } /* Literal.String.Heredoc */
-.syntax pre .si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
-.syntax pre .sx { color: #c65d09 } /* Literal.String.Other */
-.syntax pre .sr { color: #235388 } /* Literal.String.Regex */
-.syntax pre .s1 { color: #4070a0 } /* Literal.String.Single */
-.syntax pre .ss { color: #517918 } /* Literal.String.Symbol */
-.syntax pre .bp { color: #007020 } /* Name.Builtin.Pseudo */
-.syntax pre .fm { color: #06287e } /* Name.Function.Magic */
-.syntax pre .vc { color: #bb60d5 } /* Name.Variable.Class */
-.syntax pre .vg { color: #bb60d5 } /* Name.Variable.Global */
-.syntax pre .vi { color: #bb60d5 } /* Name.Variable.Instance */
-.syntax pre .vm { color: #bb60d5 } /* Name.Variable.Magic */
-.syntax pre .il { color: #40a070 } /* Literal.Number.Integer.Long */
+
+.highlight pre { background-color: #272822; }
+.highlight .hll { background-color: #272822; }
+.highlight .c { color: #75715e } /* Comment */
+.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
+.highlight .k { color: #66d9ef } /* Keyword */
+.highlight .l { color: #ae81ff } /* Literal */
+.highlight .n { color: #f8f8f2 } /* Name */
+.highlight .o { color: #f92672 } /* Operator */
+.highlight .p { color: #f8f8f2 } /* Punctuation */
+.highlight .cm { color: #75715e } /* Comment.Multiline */
+.highlight .cp { color: #75715e } /* Comment.Preproc */
+.highlight .c1 { color: #75715e } /* Comment.Single */
+.highlight .cs { color: #75715e } /* Comment.Special */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .kc { color: #66d9ef } /* Keyword.Constant */
+.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
+.highlight .kn { color: #f92672 } /* Keyword.Namespace */
+.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
+.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
+.highlight .kt { color: #66d9ef } /* Keyword.Type */
+.highlight .ld { color: #e6db74 } /* Literal.Date */
+.highlight .m { color: #ae81ff } /* Literal.Number */
+.highlight .s { color: #e6db74 } /* Literal.String */
+.highlight .na { color: #a6e22e } /* Name.Attribute */
+.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
+.highlight .nc { color: #a6e22e } /* Name.Class */
+.highlight .no { color: #66d9ef } /* Name.Constant */
+.highlight .nd { color: #a6e22e } /* Name.Decorator */
+.highlight .ni { color: #f8f8f2 } /* Name.Entity */
+.highlight .ne { color: #a6e22e } /* Name.Exception */
+.highlight .nf { color: #a6e22e } /* Name.Function */
+.highlight .nl { color: #f8f8f2 } /* Name.Label */
+.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
+.highlight .nx { color: #a6e22e } /* Name.Other */
+.highlight .py { color: #f8f8f2 } /* Name.Property */
+.highlight .nt { color: #f92672 } /* Name.Tag */
+.highlight .nv { color: #f8f8f2 } /* Name.Variable */
+.highlight .ow { color: #f92672 } /* Operator.Word */
+.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
+.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
+.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
+.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
+.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
+.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
+.highlight .sc { color: #e6db74 } /* Literal.String.Char */
+.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
+.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
+.highlight .se { color: #ae81ff } /* Literal.String.Escape */
+.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
+.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
+.highlight .sx { color: #e6db74 } /* Literal.String.Other */
+.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
+.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
+.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
+.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
+.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
+.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
+
+.highlight .gh { } /* Generic Heading & Diff Header */
+.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
+.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
+.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
