--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,11 +57,11 @@
             Egypt
           </li>
           <li>
-            <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:atef_moh@sci.asu.edu.eg"> atef_moh@sci.asu.edu.eg </a>
+            <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:{{ site.email }}"> {{ site.email }}</a>
           </li>
           <li>
             <i class="fa fa-link fa-fw"></i><span class="sr-only"> Website:</span>
-            <a style="color:#a1f229" href="http://atefhares.github.io">www.atefhares.github.io</a>
+            <a style="color:#a1f229" href="{{ site.url }}">{{ site.url }}</a>
           </li>
         </ul>
 </div>
@@ -75,6 +75,9 @@
   </ul>
 </div>
 
+
 <div class="col-box post-toc hide">
   <div class="col-box-title">TOC</div>
 </div>
+
+
