--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,9 +1,9 @@
 .highlight pre {
 padding: 10;
-background-color: #272822;
+background-color: #393a35;
 border: box;
 border-radius: 5px;
-max-height:300px;
+max-height:400px;
 width: auto;
 overflow: auto;
 display: block;
@@ -44,7 +44,6 @@ overflow-x: auto;
 
 
 
-.highlight pre { background-color: #272822; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
