adding content license to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,23 @@
 <footer class="footer">
-<div class="wrapper">
-&copy; 2016 {{ site.author }}
-</div>
+	<div class="wrapper">
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+			<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+		</a>
+
+		<br />
+
+		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span>
+		 by 
+		<a style="color:#0004ff" xmlns:cc="http://creativecommons.org/ns#" href="https://atefhares.github.io/" property="cc:attributionName" rel="cc:attributionURL">{{ site.author }}
+		</a> is licensed under a
+		<a style="color:#0004ff" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+		</a>
+
+		<div align="center"> &copy; 2017 </div>
+	</div>
+
+	
+
 </footer>
 
 <script src="{{ "/js/easybook.js" | prepend: site.baseurl }}"></script>
