--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
   {% if site.linkedin_username %}
   <ul class="social list-inline">
     <li>
-    <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin " aria-hidden="true"> </i></a>
+    <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin "> </i></a>
     </li>
   </ul>
   {% endif %}
