--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	{% include meta.html %}
 
 	<title>
-		{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}
+		{% if page.title %}{{ page.title }} – {% endif %}{{ site.description }}
 	</title>
 
 	
