--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header class="header">
   <div class="wrapper">
     <a class="site-title" href="{{ site.baseurl }}/">Home</a>
+    <a class="site-blog" href="{{ site.baseurl }}/blog/">Blog</a>
     <nav class="site-nav">
       {% for page in site.pages %}
         {% if page.title and page.public %}
-        <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+        <a class="circle" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
         {% endif %}
       {% endfor %}
     </nav>
