--- a/css/404.css
+++ b/css/404.css
@@ -1,32 +1,24 @@
-
 .col-main{
- 	margin: auto !important;
     text-align:center !important;
-    top:0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
-
-    margin: auto !important;
 }
 .notfound h1{
-	font-family: 'Lobster', cursive;
-	font-size:250px;
-	color:#709363;
-	text-align:center;
-	text-shadow:1px 1px 6px #fff;
+	font-family: 'Lobster', cursive !important;
+	font-size: 200px !important;
+	color:#709363 !important;
+	text-shadow:1px 1px 6px #fff !important;
+	border-bottom: 0px !important; 
 }	
 .notfound p{
-	color:#1AAD6C;
-	font-size:30px;
-	margin-top:1px;
-	text-align:center;
-}		
+	color:#1AAD6C !important;
+	font-size: 30px !important;
+	margin-top:1px !important;
+	border-bottom: 15px !important; 
+}
 .sub a{
 	color:white;
 	background:#289C61;
 	text-decoration:none;
-	padding:7px 120px;
+	padding:0.5em 6em;
 	font-size:20px;
 	font-family: arial, serif;
 	font-weight:bold;
@@ -35,4 +27,18 @@
 	-border-radius:.1em;
 }	
 
+@media (max-width: 1200px) {
 
+	.sub a{
+		font-size: 0.8em;
+		padding:0.5em 3em;
+	}
+	.notfound p{
+		font-size: 1.5em !important;
+	}
+
+	.notfound h1{
+		font-size: 10em !important;
+	}
+
+}
