--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,28 +6,22 @@
   {% if site.twitter_username %}
   <ul class="social list-inline">
     <li>
-    <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"> <i class="fa fa-linkedin"> </i></a>
+      <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"> <i class="fa fa-linkedin"> </i></a>
     </li>
   </ul>
-  {% endif %}
-
-  {% if site.linkedin_username %}
+  {% endif %} {% if site.linkedin_username %}
   <ul class="social list-inline">
     <li>
-    <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin "> </i></a>
+      <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin "> </i></a>
     </li>
   </ul>
-  {% endif %}
-
-  {% if site.stack-overflow_username %}
+  {% endif %} {% if site.stack-overflow_username %}
   <ul class="social list-inline">
     <li>
       <a href="http://stackoverflow.com/users/5993410/{{ site.stack-overflow_username }}" target="_blank"><i class="fa fa-stack-overflow fa-colored"></i></a>
     </li>
   </ul>
-  {% endif %}
-
-  {% if site.github_username %}
+  {% endif %} {% if site.github_username %}
   <ul class="social list-inline">
     <li>
       <a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fa fa-github-alt"></i></a>
@@ -35,8 +29,8 @@
     </li>
   </ul>
   {% endif %}
-  
-<!--   <p class="contact">
+
+  <!--   <p class="contact">
     {% if site.github_username %}
     <a href="https://github.com/{{ site.github_username }}">GitHub</a>
     {% endif %}
@@ -51,26 +45,25 @@
 
 <div class="col-box">
   <div class="col-box-title">Contact</div>
-        <ul class="list-unstyled">
-          <li>
-            <i class="fa fa-map-marker fa-fw"></i><span class="sr-only">Location:</span> Cairo,
-            Egypt
-          </li>
-          <li>
-            <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:{{ site.email }}"> {{ site.email }}</a>
-          </li>
-          <li>
-            <i class="fa fa-link fa-fw"></i><span class="sr-only"> Website:</span>
-            <a style="color:#a1f229" href="{{ site.url }}">{{ site.url }}</a>
-          </li>
-        </ul>
+  <ul class="list-unstyled">
+    <li>
+      <i class="fa fa-map-marker fa-fw"></i><span class="sr-only">Location:</span> Cairo, Egypt
+    </li>
+    <li>
+      <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:{{ site.email }}"> {{ site.email }}</a>
+    </li>
+    <li>
+      <i class="fa fa-link fa-fw"></i><span class="sr-only">Quick contact me</span>
+      <a style="color:#a1f229" href="{{ site.url }}/contactme">Quick contact me</a>
+    </li>
+  </ul>
 </div>
 
 <div class="col-box">
   <div class="col-box-title">Newest Posts</div>
   <ul class="post-list">
     {% for post in site.posts limit:5 %}
-      <li><a  style="color:#a1f229" class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+    <li><a style="color:#a1f229" class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
@@ -79,5 +72,3 @@
 <div class="col-box post-toc hide">
   <div class="col-box-title">TOC</div>
 </div>
-
-
