editing About page -part 1

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
 
 		<br />
 
-		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span>
-		 by 
+		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Blog content</span> by
 		<a style="color:#0004ff" xmlns:cc="http://creativecommons.org/ns#" href="https://atefhares.github.io/" property="cc:attributionName" rel="cc:attributionURL">{{ site.author }}
 		</a> is licensed under a
 		<a style="color:#0004ff" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
@@ -15,9 +14,4 @@
 
 		<div align="center"> &copy; 2017 </div>
 	</div>
-
-	
-
 </footer>
-
-<script src="{{ "/js/easybook.js" | prepend: site.baseurl }}"></script>
