editing About page -part 3

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -55,7 +55,7 @@
       <i class="fa fa-envelope fa-fw"></i><span class="sr-only">Email:</span><a style="color:#a1f229" href="mailto:{{ site.email }}"> {{ site.email }}</a>
     </li>
     <li>
-      <i class="fa fa-link fa-fw"></i><span class="sr-only">Quick contact me</span>
+      <i class="glyphicon glyphicon-send"></i><span class="sr-only">Quick contact me</span>
       <a style="color:#a1f229" href="{{ site.url }}/contactme">Quick contact me</a>
     </li>
   </ul>
