--- a/css/about.css
+++ b/css/about.css
@@ -158,7 +158,7 @@ h2 {
   margin-bottom: 2px;
 }
 .main-wrapper .job-title {
- color: #545E6C  !important ;
+  color: #545E6C  !important ;
   border-bottom: 0 !important;
   margin-top:0 !important;
 }
@@ -186,11 +186,11 @@ h2 {
   margin-bottom: 15px;
 }
 .skillset .item {
-  margin-bottom: 15px;
+  margin-bottom: 8px;
   overflow: hidden;
 }
 .skillset .level-title {
-  font-size: 14px;
+  font-size: 15px !important;
   margin-top: 0;
   margin-bottom: 12px;
   border-bottom: 0 !important;
