fixing importing of css files

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,5 +38,4 @@ $header-fg: #FFF;
         "base",
         "layout",
         "syntax",
-        "easybook",
-        "bootstrap";
+        "easybook";
