fixing importing of css/js files

--- a/_includes/notfound.html
+++ b/_includes/notfound.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="{{ "/css/404.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/resources/css/404.css" | prepend: site.baseurl }}">
+
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <body>
 	<div class="notfound">
