--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -1,6 +1,4 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-<link rel="stylesheet" href="{{ " /css/contactform.css " | prepend: site.baseurl }}">
-<script src = "{{ "/js/contactform.js " | prepend: site.baseurl }}"></script>
+<link rel="stylesheet" href="{{ "/resources/css/contactform.css" | prepend: site.baseurl }}">
 
 <form id="contact" action="https://docs.google.com/forms/d/e/1FAIpQLScmQHTuCtEDjp_ZoIgtO3RZIOsZU6TVdEHGZVZEI1IBld5-Jw/formResponse" method="post" autocomplete="off">
   <div class="row">
