--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,16 +6,17 @@
 		{% if page.title %}{{ page.title }} – {% endif %}{{ site.description }}
 	</title>
 
-
-	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.description }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-	<link rel="stylesheet" href="{{ "resources/fonts/font-awesome-4.7.0/css/font-awesome.min.css" | prepend: site.url }}">
-	<link rel="stylesheet" href="{{ "resources/bootstrap/css/bootstrap.min.css" | prepend: site.url }}">
-	<link rel="stylesheet" href="{{ "resources/bootstrap/css/bootstrap-theme.min.css" | prepend: site.url }}">
+	<link rel="stylesheet" href="{{ "/resources/fonts/font-awesome-4.7.0/css/font-awesome.min.css" | prepend: site.baseurl  }}">
+	<link rel="stylesheet" href="{{ "/resources/bootstrap-3.3.7/css/bootstrap.min.css" | prepend: site.baseurl  }}">
+	<link rel="stylesheet" href="{{ "/resources/bootstrap-3.3.7/css/bootstrap-theme.min.css" | prepend: site.baseurl  }}">
+
+	<link rel="stylesheet" href="{{ "/resources/css/main.css" | prepend: site.baseurl }}">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src = "{{ "/resources/js/contactform.js" | prepend: site.baseurl }}"></script>
+
 </head>
