--- a/resources/css/404.css
+++ b/resources/css/404.css
@@ -1,22 +1,22 @@
 .col-main{
-    text-align:center !important;
+    text-align:center ;
 }
 .notfound h1{
-	font-family: 'Lobster', cursive !important;
-	font-size: 200px !important;
+	font-family: 'Lobster', cursive ;
+	font-size: 200px ;
 	color:#709363 !important;
-	text-shadow:1px 1px 6px #fff !important;
-	border-bottom: 0px !important; 
-}	
+	text-shadow:1px 1px 6px #fff ;
+	border-bottom: 0px !important;
+}
 .notfound p{
-	color:#1AAD6C !important;
-	font-size: 30px !important;
-	margin-top:1px !important;
-	border-bottom: 15px !important; 
+	color:#1AAD6C ;
+	font-size: 30px ;
+	margin-top:1px ;
+	border-bottom: 15px ;
 }
 .sub a{
 	color:white;
-	background:#289C61;
+	background:#289C61 ;
 	text-decoration:none;
 	padding:0.5em 6em;
 	font-size:20px;
@@ -25,7 +25,7 @@
 	-webkit-border-radius:3em;
 	-moz-border-radius:.1em;
 	-border-radius:.1em;
-}	
+}
 
 @media (max-width: 1200px) {
 
@@ -34,11 +34,11 @@
 		padding:0.5em 3em;
 	}
 	.notfound p{
-		font-size: 1.5em !important;
+		font-size: 1.5em ;
 	}
 
 	.notfound h1{
-		font-size: 10em !important;
+		font-size: 10em ;
 	}
 
 }
