--- a/resources/css/contactform.css
+++ b/resources/css/contactform.css
@@ -1,18 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
-*{
-	margin: 0;
-	padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-
-::-webkit-input-placeholder{color: #777;}
-:-moz-placeholder { /* Firefox 18- */ color: #777;}
-::-moz-placeholder {  /* Firefox 19+ */ color: #777;}
-:-ms-input-placeholder {color: #777;}
 #contact{
   padding: 30px;
 }
@@ -22,9 +7,8 @@
 	padding: 10px;
 	margin: 10px auto;
 	width: 100%;
-	font-size: 18px;
 	color: #777;
-	padding-right: -20px;
+	padding-right: -30px;
 }
 
 #contact input[type="text"],#contact input[type="email"], #contact textarea{
@@ -81,12 +65,12 @@
 }
 
 #wronganswer{
-	color: #DC143C !important;
+	color: #DC143C ;
 }
 
 #wronganswer .hidden{
 	display: none;
 }
 #answer{
-	padding: 5px !important;
+	padding: 5px ;
 }
