adding success msg for the contact form

--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -1,6 +1,11 @@
 <link rel="stylesheet" href="{{ "/resources/css/contactform.css" | prepend: site.baseurl }}">
 
-<form id="contact" action="https://docs.google.com/forms/d/e/1FAIpQLScmQHTuCtEDjp_ZoIgtO3RZIOsZU6TVdEHGZVZEI1IBld5-Jw/formResponse" method="post" autocomplete="off">
+<!-- <noscript>
+  You must enable Javascript in order to use this page.
+</noscript> -->
+
+<iframe name="formSending" class="hidden" style="width:0;height:0;border:0; border:none;"></iframe>
+<form id="contact" target="formSending" action="https://docs.google.com/forms/d/e/1FAIpQLScmQHTuCtEDjp_ZoIgtO3RZIOsZU6TVdEHGZVZEI1IBld5-Jw/formResponse" method="post" autocomplete="off" onsubmit="onSave();return false;">
   <div class="row">
     <div class="col-md-6">
       <input type="text" placeholder="Name" name="entry.467486401" required="required" />
@@ -31,8 +36,8 @@
   </div>
 
 </form>
-<div id="sent" class="sent" class="hidden">
-  <h1>Your message have been recorded!</h1>
+<div id="sent" class="hidden">
+  <h1>Your message have been recorded <i class="fa fa-check"> </i> </h1>
   <p>I will try to contact you ASAP</p>
   <div class="sub">
     <p><a href="{{ site.baseurl }}/">Home</a></p>
