--- a/resources/css/contactform.css
+++ b/resources/css/contactform.css
@@ -106,6 +106,37 @@
 	-border-radius:.1em;
 }
 
+#noscript{
+  padding-top: 50px;
+  display: block;
+  text-align: center;
+}
+
+#noscript h1{
+  font-family: 'Lobster', cursive ;
+	color:#c4633d !important;
+	text-shadow:1px 1px 6px #fff ;
+	border-bottom: 0px !important;
+}
+
+#noscript p{
+	color:#BCBAC7 ;
+	font-size: 25px ;
+}
+
+#noscript a{
+	color:white;
+	background:#cc5437 ;
+	text-decoration:none;
+	padding:0.5em 6em;
+	font-size:15px;
+	font-family: arial, serif;
+	font-weight:bold;
+	-webkit-border-radius:3em;
+	-moz-border-radius:.1em;
+	-border-radius:.1em;
+}
+
 @media (max-width: 1200px) {
 
 	#sent a{
@@ -117,6 +148,18 @@
 	}
 
 	#sent h1{
+		font-size: 2em ;
+	}
+	
+	#noscript a{
+		font-size: 0.8em;
+		padding:0.5em 3em;
+	}
+	#noscript p{
+		font-size: 1em ;
+	}
+
+	#noscript h1{
 		font-size: 2em ;
 	}
 
