--- a/_includes/contactform.html
+++ b/_includes/contactform.html
@@ -45,7 +45,7 @@
 </div>
 <div id="noscript">
   <h1>Javascript is disabled <i class="fa fa-exclamation-circle" aria-hidden="true"></i> </h1>
-  <p>Please enable Javascript to use the cotact form.</p>
+  <p>Please enable Javascript to use the contact form.</p>
   <div class="sub">
     <p><a href="{{ site.baseurl }}/">Home</a></p>
   </div>
