--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
 		{% if page.title %}{{ page.title }} – {% endif %}{{ site.description }}
 	</title>
 
+	<link rel="icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
+
+
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.description }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
