--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,19 +10,25 @@
         <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"> <i class="fa fa-linkedin"> </i></a>
       </li>
     </ul>
-    {% endif %} {% if site.linkedin_username %}
+    {% endif %}
+    
+    {% if site.linkedin_username %}
     <ul class="social list-inline">
       <li>
-        <a href="https://eg.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin "> </i></a>
+        <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"> <i class="fa fa-linkedin "> </i></a>
       </li>
     </ul>
-    {% endif %} {% if site.stack-overflow_username %}
+    {% endif %}
+    
+    {% if site.stack-overflow_username %}
     <ul class="social list-inline">
       <li>
         <a href="http://stackoverflow.com/users/5993410/{{ site.stack-overflow_username }}" target="_blank"><i class="fa fa-stack-overflow fa-colored"></i></a>
       </li>
     </ul>
-    {% endif %} {% if site.github_username %}
+    {% endif %}
+    
+    {% if site.github_username %}
     <ul class="social list-inline">
       <li>
         <a href="https://github.com/{{ site.github_username }}" target="_blank"><i class="fa fa-github-alt"></i></a>
