--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,11 +7,18 @@
 		<br />
 
 		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Blog content</span> by
-		<a style="color:#0004ff" xmlns:cc="http://creativecommons.org/ns#" href="https://atefhares.github.io/" property="cc:attributionName" rel="cc:attributionURL">{{ site.author }}
+		<a style="color:#0004ff" xmlns:cc="http://creativecommons.org/ns#" href="https://atefhares.github.io/" property="cc:attributionName"
+		 rel="cc:attributionURL">{{ site.author }}
 		</a> is licensed under a
 		<a style="color:#0004ff" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
 		</a>
 
 		<div align="center"> &copy; 2017 </div>
+
+		<br/>
+
+		<div class="about">
+			<a style="color:#fff" href="{{ site.url }}/aboutsite">About this website</a>
+		</div>
 	</div>
 </footer>
