--- a/resources/_sass/_post.scss
+++ b/resources/_sass/_post.scss
@@ -26,7 +26,7 @@
         color: #333;
         
         h1,h2,h3,h4,h5,h6 {
-            color: #000;
+            color: #2d2727;
         }
         
         h1, h2 {
